Align frontend with 0802 UI
